--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,14 @@ body {
     background: #FFFAF5;
 }
 
+
 ul {
     list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+li {
+    display: inline;
+    margin-right: 10px; /* Add space between list items */
 }
