--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    background: #FFFAF5;
+    background: #FFFDFA;
 }
 
 
@@ -15,5 +15,6 @@ li {
 }
 
 .header {
+    margin-top: 40px;
     text-align: center;
 }
