--- a/styles.css
+++ b/styles.css
@@ -13,12 +13,16 @@ ul {
 li {
     display: inline;
     margin-right: 25px; /* Add space between list items */
-
 }
 
 li a {
     text-decoration: none;
-    color: black;
+    color: #764C97;
+}
+
+.title a {
+    text-decoration: none;
+    color: #764C97;
 }
 
 .header {
