--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,6 @@ body {
     font-family: 'Poppins', sans-serif;
 }
 
-
 ul {
     list-style-type: none;
     padding: 0;
@@ -15,21 +14,22 @@ li {
     margin-right: 25px; /* Add space between list items */
 }
 
-li a {
-    text-decoration: none;
-    color: black;
-}
-
-title a {
-    text-decoration: none;
-    color: black;
-}
-
-a:hover {
-    color: #764C97;
-}
-
 .header {
     margin-top: 40px;
     text-align: center;
+    color: black;
+}
+
+.header a {
+    text-decoration: none;
+    color: black;
+}
+
+.header a:hover {
+    color: #764C97;
+}
+
+.title {
+    font-size: 40px;
+    margin-bottom: -50px; /* Adjust the top margin */
 }
