--- a/styles.css
+++ b/styles.css
@@ -1,35 +1,71 @@
 body {
     background: #FFFDFA;
-    font-family: 'Poppins', sans-serif;
-}
-
-ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-}
-
-li {
-    display: inline;
-    margin-right: 25px; /* Add space between list items */
-}
-
-.header {
-    margin-top: 40px;
-    text-align: center;
-    color: black;
-}
-
-.header a {
-    text-decoration: none;
-    color: black;
-}
-
-.header a:hover {
-    color: #764C97;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    color: #1E1E1E;
 }
 
 .title {
-    font-size: 40px;
-    margin-bottom: -50px
+    margin-top: 40px;
+    text-align: center;
+}
+
+.title a {
+    text-decoration: none;
+    font-size: 50px;
+    color: #1E1E1E;
+}
+
+.title a:hover {
+    color: #764C97;
+}
+
+.image-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh; /* Set the container height for demonstration */
+}
+
+.image {
+    width: 200px;
+    height: 200px;
+    background-size: cover;
+    transition: background-image 0.3s ease-in-out;
+    cursor: pointer; /* Add cursor pointer to indicate hover effect */
+}
+  
+#image1 {
+    background-image: url('landing/land1.jpg');
+}
+
+#image1:hover {
+    background-image: url('https://video-images.vice.com//products/62f52c45bdc7f10097ccbdea/gallery-image/1660234822649-screen-shot-2022-08-11-at-122009-pm.png?crop=0.5779109589041096xw:1xh;center,center'); /* Image to show on hover */
+}
+
+#image2 {
+    background-image: url('landing/land2.jpg');
+}
+
+#image2:hover {
+    background-image: url('https://video-images.vice.com//products/62f52c45bdc7f10097ccbdea/gallery-image/1660234822649-screen-shot-2022-08-11-at-122009-pm.png?crop=0.5779109589041096xw:1xh;center,center')
+}
+
+#image3 {
+    background-image: url('image3.jpg');
+}
+
+#image3:hover {
+    background-image: url('https://video-images.vice.com//products/62f52c45bdc7f10097ccbdea/gallery-image/1660234822649-screen-shot-2022-08-11-at-122009-pm.png?crop=0.5779109589041096xw:1xh;center,center')
+}
+
+#image4 {
+    background-image: url('image4.jpg');
+}
+
+#image5 {
+    background-image: url('image5.jpg');
+}
+
+#image6 {
+    background-image: url('image6.jpg');
 }
