--- a/styles.css
+++ b/styles.css
@@ -5,13 +5,13 @@ body {
 }
 
 .title {
-    margin-top: 40px;
+    margin-top: 5vw;
     text-align: center;
 }
 
 .title a {
     text-decoration: none;
-    font-size: 50px;
+    font-size: 3vw; /* Set font size to 5% of viewport width */
     color: #1E1E1E;
 }
 
@@ -22,9 +22,9 @@ body {
 .image-container {
     display: flex;
     flex-direction: column;
-    margin-right: 250px;
-    margin-left: 250px;
-    margin-bottom: 80px;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 50px;
     margin-top: 40px;
   }
   
@@ -34,57 +34,65 @@ body {
   
   .image {
     flex: 1;
-    height: 200px; /* Adjust height as needed */
+    width: 15vw; /* Set width to 30% of viewport width */
+    height: 15vw; /* Set height to match width */
+    max-width: 100%; /* Ensure images don't exceed screen width */
+    max-height: 100%; /* Ensure images don't exceed screen height */
     background-size: cover;
     transition: background-image 0.3s ease-in-out;
     cursor: pointer;
     margin: 5px;
   }
-  
+
   #image1 {
     background-image: url('landing/land1.jpg');
   }
-
+  
   #image1:hover {
-    background-image: url('https://video-images.vice.com//products/62f52c45bdc7f10097ccbdea/gallery-image/1660234822649-screen-shot-2022-08-11-at-122009-pm.png?crop=0.5779109589041096xw:1xh;center,center'); /* Image to show on hover */
-}
+    background-image: url('landing/land2.jpg'); /* Image to show on hover */
+  }
   
   #image2 {
     background-image: url('landing/land1.jpg');
   }
-
+  
   #image2:hover {
     background-image: url('https://video-images.vice.com//products/62f52c45bdc7f10097ccbdea/gallery-image/1660234822649-screen-shot-2022-08-11-at-122009-pm.png?crop=0.5779109589041096xw:1xh;center,center'); /* Image to show on hover */
-}
+  }
   
   #image3 {
     background-image: url('landing/land1.jpg');
   }
-
+  
   #image3:hover {
     background-image: url('https://video-images.vice.com//products/62f52c45bdc7f10097ccbdea/gallery-image/1660234822649-screen-shot-2022-08-11-at-122009-pm.png?crop=0.5779109589041096xw:1xh;center,center'); /* Image to show on hover */
-}
+  }
   
-#image4 {
+  #image4 {
     background-image: url('landing/land1.jpg');
   }
-
+  
   #image4:hover {
     background-image: url('https://video-images.vice.com//products/62f52c45bdc7f10097ccbdea/gallery-image/1660234822649-screen-shot-2022-08-11-at-122009-pm.png?crop=0.5779109589041096xw:1xh;center,center'); /* Image to show on hover */
-}
-
-#image5 {
+  }
+  
+  #image5 {
     background-image: url('landing/land1.jpg');
   }
-
+  
   #image5:hover {
     background-image: url('https://video-images.vice.com//products/62f52c45bdc7f10097ccbdea/gallery-image/1660234822649-screen-shot-2022-08-11-at-122009-pm.png?crop=0.5779109589041096xw:1xh;center,center'); /* Image to show on hover */
-}
+  }
   
-#image6 {
+  #image6 {
     background-image: url('landing/land1.jpg');
   }
-
+  
   #image6:hover {
     background-image: url('https://video-images.vice.com//products/62f52c45bdc7f10097ccbdea/gallery-image/1660234822649-screen-shot-2022-08-11-at-122009-pm.png?crop=0.5779109589041096xw:1xh;center,center'); /* Image to show on hover */
+  }
+
+.footer {
+    font-size: 1vw;
+    margin-bottom: 5vw;
 }
