--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,7 @@ body {
 }
 
 #image1:hover {
-    background-image: url('landing/land2.jpg'); /* Image to show on hover */
+    background-image: url('landing/land2.JPG'); 
 }
 
 #image2 {
