--- a/styles.css
+++ b/styles.css
@@ -60,7 +60,7 @@ body {
 }
 
 #image2 {
-    background-image: url('landing/land4.JPG');
+    background-image: url('landing/land4.jpg');
 }
 
 #image2:hover {
