--- a/styles.css
+++ b/styles.css
@@ -76,7 +76,7 @@ body {
 }
 
 #image4 {
-    background-image: url('landing/land2.jpg');
+    background-image: url('landing/landing2.jpg');
 }
 
 #image4:hover {
