--- a/styles.css
+++ b/styles.css
@@ -92,7 +92,7 @@ body {
 }
 
 #image6 {
-    background-image: url('landing/land5.jpg');
+    background-image: url('landing/landing5.jpg');
 }
 
 #image6:hover {
